--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
 
               $.ajax({
                 type:"POST",
-                url:"data/commit",
+                url:"data/rsa",
                 contentType:"application/json;charset=utf8",
                 data:JSON.stringify({"encryptedText":encrypted,"plainText":plainText}),
                 dataType:"json",
