--- a/src/main/resources/static/aes.html
+++ b/src/main/resources/static/aes.html
@@ -25,9 +25,9 @@
 
 
        $(function () {
-        var data = "This is a secret";
-        var key = 'Test1234Test1234';
-        var iv = 'phjlknslfdhksldf';
+        var data = "jj[zBU91";
+        var key = 'xlhlyqddwrgiskkj';
+        var iv = 'obtswwpwqkxibhej';
 
         var encrypted = encrypt(data,key, iv);
         $("#p1").text("Encrypted: "+encrypted);
